--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.2.4",
     "nodemon": "^2.0.22",
-    "routes": "^2.1.0"
+    "routes": "^2.1.0",
+    "sequelize": "^6.31.1",
+    "uuid": "^9.0.0"
   }
 }
