--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "csv-writer": "^1.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^9.22.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.4",
     "nodemon": "^2.0.22",
