--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "tanprom",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,12 +15,24 @@
     "csv-writer": "^1.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "firebase": "^9.22.0",
+    "firebase": "^9.22.1",
+    "firebase-admin": "^11.9.0",
+    "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.4",
     "nodemon": "^2.0.22",
     "routes": "^2.1.0",
     "sequelize": "^6.31.1",
     "sequelize-cli": "^6.6.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LukaDurisic/Tanprom-back.git"
+  },
+  "bugs": {
+    "url": "https://github.com/LukaDurisic/Tanprom-back/issues"
+  },
+  "homepage": "https://github.com/LukaDurisic/Tanprom-back#readme",
+  "description": ""
 }
